Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1832

Namespace definitions attached to xs:extension/xs:restriction are not processed

    XMLWordPrintableJSON

Details

    Description

      Run the SCMPrint sample on the attached file: it will report 2 sets of errors

      Error at file C:\testcase\schema11.xsd, line 6, char 47
      Message: prefix 'q1' can not be resolved to namespace URI

      Error at file C:\testcase\schema11.xsd, line 6, char 47
      Message: namespace '' is referenced without import declaration

      Error at file C:\testcase\schema11.xsd, line 29, char 47
      Message: prefix 'q8' can not be resolved to namespace URI

      Error at file C:\testcase\schema11.xsd, line 29, char 47
      Message: namespace '' is referenced without import declaration

      cause by

      <xs:extension xmlns:q1="x" base="q1:baseC">

      and

      <xs:extension xmlns:q8="x" base="q8:baseS">

      Attachments

        1. schema11.xsd
          1 kB
          Alberto Massari

        Activity

          People

            amassari Alberto Massari
            amassari Alberto Massari
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: