Process namespaces also in xs:extension/xs:restriction nodes under xs:simpleContent/xs:complexContent (XERCESC-1832)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@700909 13f79535-47bb-0310-9956-ffa450edef68